fix: correct profile action avatar alignment

--- a/packages/top-nav/src/presenters/ProfileButtonPresenter.scss
+++ b/packages/top-nav/src/presenters/ProfileButtonPresenter.scss
@@ -1,6 +1,7 @@
 .hig__top-nav__profile-action__button {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   width: 44px;
   height: 44px;
